# pyblinker_optimize_gpt

./: 90_eyetracking_data.py  JeFaPaTo_blink_feature.md  README.MD  blink_pipeline_documentation.md  blink_property_calculations.md  f.ipynb  ff.py  how_to_top_bottom_point.py  list_eye_features.md  llm_prompt.txt  new.md.ipynb  note_experiment.ipynb  pyproject.toml  requirements.txt  setup.py  tt.py  watthis.py
Devel/: dev_blinkfit_math_pd_compatible.py  draft_viz.py  how_open_mat_file.py  load_edf.py  mmf_file_viz_blink.py
direct_blink_properties/: afasfsa.py  batch_refinement_pipeline.py  blink_epoch_normalization.py  ear_blink_transformers.py  experiment.ipynb  experiment_gemini.py  fitblinks_debug.pkl  main_p.py  man.py  process_blink_statistic.py  prompt.md  signal_refinement.py  util.py  viz.py
feature_extraction/: main.py
migration_files/: dev_blinkfit_math_pd_compatible.py  draft_viz.py  how_open_mat_file.py  mmf_file_viz_blink.py
pyblinkers/: __init__.py  base_left_right.py  default_setting.py  extractBlinkProperties.py  extract_blink_properties.py  fit_blink.py  getBlinkPositions.py  getBlinkPositions_vislab.py  getRepresentativeChannel.py  line_intersection_matlab.py  matlab_forking.py  misc.py  pipeline.py  pipeline_steps.py  pyblinker.py  segment_blink_properties.py  viz_pd.py  viz_sanity.py  zero_crossing.py
pyblinkers.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pyear/: __init__.py  pipeline.py
rblinks/: 0_learn_up_process.py  1_open_data.py  2_get_top_bottom.py  find_valley_in.py  viz_rblinks.py
tutorial/: 0_test_pd_mff.py  1_basic_usage.py  (+13 more)
(+168 files in other folders)
