[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyblinkers"
version = "0.1.0"
requires-python = ">=3.10"
authors = [{email = "balandong@ums.edu.my", name = "Rodney Petrus Balandong"}]
description = "Toolkit for blink-based fatigue analysis"
readme = "README.md"
license = { text = "BSD-3-Clause" }
dependencies = [
    "mne",
    "pandas",
    "tqdm",
    "PyWavelets",
    "gdown",
]

[tool.setuptools.packages.find]
include = ["pyblinkers*"]
